# ServerGo

./: .gitignore  Cargo.toml  Makefile  PERF.md  PerformanceReport.md  ReadMe.md  SPEC.md  ThirdPartyLicenses.txt  config.yaml  config2.yaml  github.toml  perf_report.md  test_case.md
benches/: storage_bench.rs
deploy/: Dockerfile  Makefile  docker-compose.yml
install_packages/: deploy_tutorial.md  quick_install.sh  安裝教學.md
install_packages/k8s/: configmap.yaml  namespace.yaml  service.yaml  statefulset.yaml
install_packages/scripts/: install.sh
scratch/: aging_test.py  bench_resp.py  cluster_bench.py  test_resp.py
src/: lib.rs  main.rs  metrics.rs  storage.rs
tests/: drop_leak_tests.rs  integration_tests.rs  loom_tests.rs
tools/: bench.sh  chaos_test.py  dashboard.py  entrypoint.sh  package.sh  ram_crusher.py  update_licenses.py  verify_sync.py
