[package]
name = "ServerGo"
version = "0.1.0"
edition = "2024"

[dependencies]
dualcache-ff = "0.1.0"
io_oi_core = { path = "deps/io_oi/core" }
io_oi_node = { path = "deps/io_oi/node" }
cdDB = { path = "deps/cdDB" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
futures = "0.3"
crossbeam = "0.8"
parking_lot = "0.12"
rkyv = { version = "0.7", features = ["validation", "strict"] }
arc-swap = "1.7"
rand = "0.8"
hex = "0.4"
redis-protocol = { version = "5", features = ["codec"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.9"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
iroh = "0.98"
iroh-gossip = "0.13"
iroh-net = "0.13"
postcard = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
anyhow = "1.0"
resp-rs = "0.1.8"
loom = { version = "0.7", optional = true }

[dev-dependencies]
loom = "0.7"
criterion = "0.5"
redis = { version = "0.25", features = ["tokio-comp"] }

[[bench]]
name = "storage_bench"
harness = false

[features]
default = ["io_oi", "tiered-storage"]
io_oi = []
pure-cache = []
tiered-storage = []
loom = ["dep:loom"]
