[package]
name = "ServerGo"
version = "0.3.1"
edition = "2024"

[dependencies]
io_oi_core = { version = "0.4.0", path = "../io_oi/core" }
io_oi_node = { path = "../io_oi/node", features = ["serial"] }
cdDB = { version = "0.4.0", path = "../cdDB" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
futures = "0.3"
crossbeam = "0.8"
rkyv = { version = "0.8", features = ["bytecheck"] }
arc-swap = "1.7"
rand = "0.8"
redis-protocol = { version = "5", features = ["codec"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.9"
clap = { version = "4.5", features = ["derive"] }
socket2 = "0.5"
num_cpus = "1.13"
tracing = "0.1"
tracing-subscriber = "0.3"
foundations = { version = "5.7.1", default-features = false, features = ["logging", "metrics", "tracing", "telemetry-server", "cli", "settings", "security"] }
sha2 = "0.10"
iroh = "0.98"
iroh-gossip = "0.13"
iroh-net = "0.13"
postcard = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
anyhow = "1.0"
resp-rs = "0.1.8"
loom = { version = "0.7", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
tokio = { version = "1", features = ["full", "io-uring"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tokio = { version = "1", features = ["full"] }

core_affinity = "0.8"

[dev-dependencies]
loom = "0.7"
criterion = "0.5"
redis = { version = "0.25", features = ["tokio-comp"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
tempfile = "3.8"

[[bench]]
name = "storage_bench"
harness = false

[features]
default = ["io_oi", "tiered-storage", "jemalloc"]
io_oi = []
pure-cache = []
tiered-storage = []
loom = ["dep:loom"]
jemalloc = ["foundations/jemalloc", "foundations/memory-profiling"]
